objects/Daily_Meal_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Breakfasts_Served__c</fullName>
        <description>This is the number of additional breakfasts served that day.</description>
        <inlineHelpText>This is the number of additional breakfasts served that day.</inlineHelpText>
        <label>Additional Breakfasts Served</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_Lunches_Served__c</fullName>
        <description>This is the number of additional lunches served that day.</description>
        <inlineHelpText>This is the number of additional lunches served that day.</inlineHelpText>
        <label>Additional Lunches Served</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <description>This field is a concatenation of the school ID and the date.</description>
        <label>Key</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Scan_Reimbursable_Breakfasts__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Breakfast that is not scanned should be manually totalled and entered here.</description>
        <inlineHelpText>Breakfast that is not scanned should be manually totalled and entered here.</inlineHelpText>
        <label>Non-Scan Reimbursable Breakfasts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>School</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Daily Meal Summaries</relationshipLabel>
        <relationshipName>Daily_Meal_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Summary_Date__c</fullName>
        <description>This is the date the transaction records are being aggregated for .</description>
        <inlineHelpText>This is the date the transaction records are being aggregated for .</inlineHelpText>
        <label>Summary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Breakfasts__c</fullName>
        <description>This is the total number of breakfasts served that day.</description>
        <formula>Additional_Breakfasts_Served__c  +  Total_Free_Breakfasts__c  +  Total_Full_Price_Breakfasts__c  +  Total_Reduced_Breakfasts__c + Non_Scan_Reimbursable_Breakfasts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the total number of breakfasts served that day.</inlineHelpText>
        <label>Total Breakfasts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Federal_Reimbursement__c</fullName>
        <description>This is the total amount of federal reimbursement for a given day based on the meal prices established in the Meals Setup object.</description>
        <inlineHelpText>This is the total amount of federal reimbursement for a given day based on the meal prices established in the Meals Setup object.</inlineHelpText>
        <label>Total Federal Reimbursement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Free_Breakfasts__c</fullName>
        <description>This is the total number of free breakfasts served that day.</description>
        <inlineHelpText>This is the total number of free breakfasts served that day.</inlineHelpText>
        <label>Total Free Breakfasts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Free_Lunches__c</fullName>
        <description>This is the total number of free lunches served that day.</description>
        <inlineHelpText>This is the total number of free lunches served that day.</inlineHelpText>
        <label>Total Free Lunches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Full_Price_Breakfasts__c</fullName>
        <description>This is the total number of full-priced breakfasts served that day.</description>
        <inlineHelpText>This is the total number of full-priced breakfasts served that day.</inlineHelpText>
        <label>Total Full-Price Breakfasts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Full_Price_Lunches__c</fullName>
        <description>This is the total number of full-priced lunches served that day.</description>
        <inlineHelpText>This is the total number of full-priced lunches served that day.</inlineHelpText>
        <label>Total Full-Price Lunches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Lunches__c</fullName>
        <description>This is the total number of lunches served that day.</description>
        <formula>Additional_Lunches_Served__c  +  Total_Free_Lunches__c  +  Total_Full_Price_Lunches__c  +  Total_Reduced_Lunches__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the total number of lunches served that day.</inlineHelpText>
        <label>Total Lunches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Monies_Received__c</fullName>
        <description>This is the total amount received from students paying for either full-priced or reduced meals for the day.</description>
        <inlineHelpText>This is the total amount received from students paying for either full-priced or reduced meals for the day.</inlineHelpText>
        <label>Total Monies Received</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Reduced_Breakfasts__c</fullName>
        <description>This is the total number of reduced breakfasts served that day.</description>
        <inlineHelpText>This is the total number of reduced breakfasts served that day.</inlineHelpText>
        <label>Total Reduced Breakfasts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Reduced_Lunches__c</fullName>
        <description>This is the total number of reduced lunches served that day.</description>
        <inlineHelpText>This is the total number of reduced lunches served that day.</inlineHelpText>
        <label>Total Reduced Lunches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_State_Local_Reimbursement__c</fullName>
        <description>This is the total amount of State/Local reimbursement for a given day based on the meal prices established in the Meals Setup object.</description>
        <inlineHelpText>This is the total amount of State/Local reimbursement for a given day based on the meal prices established in the Meals Setup object.</inlineHelpText>
        <label>Total State/Local Reimbursement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Daily Meal Summary</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DMS-{0}</displayFormat>
        <label>Daily Meal Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Meal Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>